[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/GameOver.gd" type="Script" id=1]
[ext_resource path="res://fonts/default_font.tres" type="DynamicFont" id=2]

[node name="GameOver" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 457.0
margin_top = 246.0
margin_right = 567.0
margin_bottom = 353.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 103.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 96.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "GAME OVER"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 96.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Restart"

[node name="Title" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 96.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 2 )
text = "Title Screen"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 96.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 2 )
text = "Exit Game"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Title" to="." method="_on_Title_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
